schema/app-scaffold/k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app
  labels:
    app: __APP_NAME__
    app.kubernetes.io/name: __APP_NAME__
    app.kubernetes.io/part-of: __APP_NAME__
spec:
  type: LoadBalancer
  selector:
    app: __APP_NAME__
  ports:
    - name: http
      port: __APP_PORT__
      targetPort: http
