schema/app-scaffold/k8s/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: __APP_NAME__
  labels:
    app.kubernetes.io/name: __APP_NAME__
    app.kubernetes.io/part-of: __APP_NAME__
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "50m"
spec:
  ingressClassName: nginx
  rules:
    - host: mlapi.us
      http:
        paths:
          - path: /__APP_NAME__
            pathType: Prefix
            backend:
              service:
                name: app
                port:
                  number: __APP_PORT__
